--- a/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
@@ -128,7 +128,7 @@
                                     TabIndex="0"
                                     HorizontalAlignment="Right"
                                     Background="{TemplateBinding CloseButtonBackground}"
-                                    Content="&#xE711;"
+                                    Content="&#xE1D9;"
                                     FontFamily="Segoe MDL2 Assets"
                                     Foreground="{TemplateBinding CloseButtonForeground}"
                                     Visibility="Collapsed" />
