--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/DropShadowPanel/DropShadowPanelPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/DropShadowPanel/DropShadowPanelPage.xaml
@@ -43,9 +43,7 @@
                 <TextBlock Style="{StaticResource TitleText}">TextBlock</TextBlock>
                 <Border Style="{StaticResource DividingBorder}" />
 
-                <controls:DropShadowPanel HorizontalAlignment="Center"
-                                          VerticalAlignment="Center"
-                                          BlurRadius="{Binding BlurRadius.Value, Mode=OneWay}"
+                <controls:DropShadowPanel BlurRadius="{Binding BlurRadius.Value, Mode=OneWay}"
                                           OffsetX="{Binding OffsetX.Value, Mode=OneWay}"
                                           OffsetY="{Binding OffsetY.Value, Mode=OneWay}"
                                           ShadowOpacity="{Binding Opacity.Value, Mode=OneWay}"
