--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ClassicMenu/ClassicMenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ClassicMenu/ClassicMenuPage.xaml
@@ -2,39 +2,79 @@
     x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.ClassicMenuPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:wrapPanel="using:Microsoft.Toolkit.Uwp.UI.Controls.WrapPanel"
-    xmlns:classicMenu="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.ClassicMenu"
+    xmlns:commands="using:Microsoft.Toolkit.Uwp.SampleApp.ClassicMenu.Commands"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.Resources>
-            <classicMenu:DialogCommand x:Key="DCommand"/>
+            <commands:NewProjectCommand x:Key="NewProject"/>
+            <commands:NewFileCommand x:Key="NewFile"/>
+            <commands:GenericCommand x:Key="GenericCommand"/>
         </Grid.Resources>
 
-        <controls:ClassicMenu Background="Green" HorizontalAlignment="Left" VerticalAlignment="Top"
+        <controls:ClassicMenu HorizontalAlignment="Left"
+                              VerticalAlignment="Top"
                               Orientation="Vertical">
-            <controls:ClassicMenuItem>
-                <MenuFlyoutSubItem Text="Go to">
-                    <MenuFlyoutItem Text="Go to project" Click="MenuFlyoutItem_Click"
-                                    controls:ClassicMenu.InputGestureText="Ctrl+O"  Command="{StaticResource DCommand}"/>
-                    <MenuFlyoutItem Text="Go to line"  Click="MenuFlyoutItem_Click"/>
+            <controls:ClassicMenuItem Header="File">
+                <MenuFlyoutSubItem Text="New">
+                    <MenuFlyoutItem Text="Project" 
+                                    controls:ClassicMenu.InputGestureText="Ctrl+Shift+N"  
+                                    Command="{StaticResource NewProject}"/>
+                    <MenuFlyoutItem Text="File" 
+                                    controls:ClassicMenu.InputGestureText="Ctrl+N"  
+                                    Command="{StaticResource NewFile}"/>
+                </MenuFlyoutSubItem>
+                <MenuFlyoutSubItem Text="Open">
+                    <MenuFlyoutItem Text="Project/Solution" 
+                                    controls:ClassicMenu.InputGestureText="Ctrl+Shift+O"  
+                                    Command="{StaticResource GenericCommand}" 
+                                    CommandParameter="Select Project/Solution"/>
+                    <MenuFlyoutItem Text="File" 
+                                    controls:ClassicMenu.InputGestureText="Ctrl+O"  
+                                    Command="{StaticResource GenericCommand}"
+                                    CommandParameter="Select File"/>
                 </MenuFlyoutSubItem>
                 <MenuFlyoutSeparator />
-                <MenuFlyoutItem Text="asdasd" Click="MenuFlyoutItem_Click"></MenuFlyoutItem>
+                <MenuFlyoutItem Text="Page Setup" />
+                <MenuFlyoutItem Text="Print" 
+                                    controls:ClassicMenu.InputGestureText="Ctrl+P"  
+                                    Command="{StaticResource GenericCommand}" 
+                                    CommandParameter="Page is Printed!!"/>
+                <MenuFlyoutSeparator />
+                <MenuFlyoutSubItem Text="Recent Files">
+                    <MenuFlyoutItem Text="UWP ToolKit GridSplitter"/>
+                    <MenuFlyoutItem Text="UWP ToolKit WrapPanel"/>
+                </MenuFlyoutSubItem>
+                <MenuFlyoutItem Text="Exit" 
+                                    controls:ClassicMenu.InputGestureText="Ctrl+Shit+E"  
+                                    Command="{StaticResource GenericCommand}" 
+                                    CommandParameter="Solution closed"/>
             </controls:ClassicMenuItem>
 
-            <controls:ClassicMenuItem>
-                <MenuFlyoutSubItem Text="Go to">
-                    <MenuFlyoutItem Text="Go to project" Click="MenuFlyoutItem_Click"/>
-                    <MenuFlyoutItem Text="Go to line" Click="MenuFlyoutItem_Click"/>
-                </MenuFlyoutSubItem>
-                <MenuFlyoutSeparator />
-                <MenuFlyoutItem Text="asdasd" Click="MenuFlyoutItem_Click"></MenuFlyoutItem>
+
+            <controls:ClassicMenuItem Header="Edit">
+                
             </controls:ClassicMenuItem>
+
+            <controls:ClassicMenuItem Header="View">
+                
+            </controls:ClassicMenuItem>
+            
+            <controls:ClassicMenuItem Header="Project">
+                
+            </controls:ClassicMenuItem>
+
+            <controls:ClassicMenuItem Header="Build">
+                
+            </controls:ClassicMenuItem>
+
+            <controls:ClassicMenuItem Header="Debug">
+                
+            </controls:ClassicMenuItem>
+
         </controls:ClassicMenu>
 
     </Grid>
