#981 adding data to edit menu

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ClassicMenu/ClassicMenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ClassicMenu/ClassicMenuPage.xaml
@@ -61,7 +61,10 @@
 
 
             <controls:ClassicMenuItem Header="Edit">
-                
+                <MenuFlyoutSubItem Text="Go To">
+                    <MenuFlyoutItem Text="Go To Line" />
+                    <MenuFlyoutItem Text="Go To All" />
+                </MenuFlyoutSubItem>
             </controls:ClassicMenuItem>
 
             <controls:ClassicMenuItem Header="View">
