-Simplified Image vs ImageBrush Checking. -Moved Stroke Visual State Strings to RoundImageEx. -Attached PlaceholderSourceChanged (Woops) and removed SetSource as it was copied from ImageEx.Source. -ShowStroke Visual State doesn't seem to work, testing the Stroke animation with EnableDependentAnimation works on the CommonStates, but not in StrokeStates, so I am temporarily setting StrokeThickness binding (ShowPlaceholderStroke does nothting).

--- a/Microsoft.Toolkit.Uwp.UI.Controls/ImageEx/RoundImageEx.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/ImageEx/RoundImageEx.xaml
@@ -109,6 +109,7 @@
                                                          BeginTime="0"
                                                          Storyboard.TargetName="PlaceholderEllipse"
                                                          Storyboard.TargetProperty="StrokeThickness"
+                                                         EnableDependentAnimation="True"
                                                          From="0"
                                                          To="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=StrokeThickness}" />
                                     </Storyboard>
